--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -25,50 +25,14 @@ jobs:
         linuxVersion: [ bullseye ]
         dockerImage: [ x86_64, arm-32bit-armv6l, arm-64bit-aarch64 ]
         include:        
-          - dockerImage: x86_64
-            linuxVersion: bullseye
-            dockerName: Debian Bullseye (x86_64)
-            platform: linux
-          - dockerImage: x86_64
-            linuxVersion: bookworm
-            dockerName: Debian Bookworm (x86_64)
-            platform: linux
-          - dockerImage: x86_64
-            linuxVersion: jammy
-            dockerName: Ubuntu 22.04 LTS (x86_64)
-            platform: linux
-          - dockerImage: x86_64
-            linuxVersion: noble
-            dockerName: Ubuntu 24.04 LTS (x86_64)
-            platform: linux
-          - dockerImage: x86_64
-            linuxVersion: oracular
-            dockerName: Ubuntu 24.10 (x86_64)
-            platform: linux               
-          - dockerImage: arm-32bit-armv6l
-            linuxVersion: bullseye
-            dockerName: Debian Bullseye (ARM 32-bit Raspberry Pi OS)
-            platform: rpi
           - dockerImage: arm-64bit-aarch64
             linuxVersion: bullseye
             dockerName: Debian Bullseye (ARM 64-bit Raspberry Pi OS)
-            platform: rpi
-          - dockerImage: arm-32bit-armv6l
-            linuxVersion: bookworm
-            dockerName: Debian Bookworm (ARM 32-bit Raspberry Pi OS)
             platform: rpi
           - dockerImage: arm-64bit-aarch64
             linuxVersion: bookworm
             dockerName: Debian Bookworm (ARM 64-bit Raspberry Pi OS)
             platform: rpi              
-          - dockerImage: x86_64
-            linuxVersion: Fedora_41
-            dockerName: Fedora 41 (x86_64)
-            platform: linux
-          - dockerImage: x86_64
-            linuxVersion: ArchLinux
-            dockerName: Arch Linux (x86_64)
-            platform: linux
     steps:
       # checkout
       - uses: actions/checkout@v4.2.2
@@ -134,92 +98,6 @@ jobs:
             deploy/Hyper*.deb
             deploy/Hyper*.zst
             deploy/Hyper*.rpm
-
-######################
-######## macOS #######
-######################
-
-  macOS:
-    name: ${{ matrix.JOB_NAME }}
-    runs-on: ${{ matrix.JOB_RUNNER }}
-    strategy:
-      matrix:
-        include:        
-          - JOB_RUNNER: macos-14
-            JOB_NAME: macOS 14 (arm64 = M1/M2/M3/M4)
-            QT_VERSION: 6
-            NICE_NAME: arm64_M1_M2
-          - JOB_RUNNER: macos-13
-            JOB_NAME: macOS 13 (x64)
-            QT_VERSION: 6
-            NICE_NAME: x64
-    steps:
-      # Checkout
-      - uses: actions/checkout@v4.2.2
-        with:
-            submodules: true
-
-      # Generate cache id
-      - name: Prepare ccache timestamp
-        if: env.USE_CACHE == 'true'
-        id: ccache_cache_timestamp
-        shell: cmake -P {0}
-        run: |
-            string(TIMESTAMP current_date "%Y-%m-%d-%H-%M-%S" UTC)
-            file(APPEND "$ENV{GITHUB_OUTPUT}" "timestamp=${current_date}")
-
-      # Download cache
-      - name: Download ccache files
-        if: env.USE_CACHE == 'true'
-        uses: actions/cache@v4.2.0
-        with:
-            path: build/.ccache
-            key: macOS-ccache-${{ matrix.NICE_NAME }}-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
-            restore-keys: macOS-ccache-${{ matrix.NICE_NAME }}
-
-      - name: Clear branch ccache storage
-        uses: yumemi-inc/clean-cache-action@v1
-        with:
-          ref: ${{ github.event.ref }}
-          key: macOS-ccache-${{ matrix.NICE_NAME }}
-
-      # Install deps
-      - name: Install deps
-        shell: bash
-        run: brew install -q qt@${{ matrix.QT_VERSION }} xz ccache zstd webp jpeg-turbo flatbuffers pkg-config || true
-        
-      # Set env
-      - name: Set QT5 env
-        if: ( matrix.QT_VERSION == 5 )
-        shell: bash
-        run: |
-            export Qt5_DIR=`brew --prefix qt@5`;
-            echo "Qt5_DIR=$Qt5_DIR" >> $GITHUB_ENV
-            
-        # Build process
-      - name: Build packages
-        env:
-            PLATFORM: osx
-            USE_CCACHE: ${{ env.USE_CACHE }}
-            RESET_CACHE: ${{ env.RESET_CACHE }}
-        shell: bash
-        run: ./build.sh
-
-      # Upload artifacts (only on tagged commit)
-      - name: Upload artifacts
-        if: startsWith(github.event.ref, 'refs/tags') && github.event_name != 'pull_request'
-        uses: actions/upload-artifact@v4.5.0
-        with:
-            name: release-artifact-${{ matrix.JOB_RUNNER }}      
-            path: build/Hyper*.dmg
-
-      # Upload artifacts from commit
-      - name: Upload artifacts from commit
-        if: (startsWith(github.event.ref, 'refs/tags') != true) && github.event_name != 'pull_request'
-        uses: actions/upload-artifact@v4.5.0
-        with:
-            name: Apple_macOS_${{ matrix.NICE_NAME }}_DMG_installer
-            path: build/Hyper*.dmg
 
 ######################
 ###### Windows #######
@@ -359,7 +237,7 @@ jobs:
   publish:
     name: Publish Releases
     if: startsWith(github.event.ref, 'refs/tags') && github.event_name != 'pull_request'
-    needs: [Linux, windows, macOS]
+    needs: [Linux, windows]
     runs-on: ubuntu-22.04
     permissions:
       contents: write
